--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -11,5 +11,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: #f8f8f8;
     box-shadow: 0px 0px 32px rgb(28 41 61 / 5%), 0px 32px 32px rgb(28 41 61 / 6%);
 }
+
